# PointToLine

./: CMakeLists.txt  README.md  jsonparser.h  pointtoline.h  result.json
src/: main.cpp
src/parser/: jsonparser.cpp
src/point-to-line/: pointtoline.cpp
src/window/: mainwindow.cpp  mainwindow.h
